fix ui_from two column css spacing

--- a/src/components/ui-component/templates/form.css
+++ b/src/components/ui-component/templates/form.css
@@ -14,8 +14,8 @@
 .nr-dashboard-form .formlabel {
     font-size: large;
     font-weight: 500;
-    margin-top: 8px;
-    margin-bottom: 20px;
+    margin-top: 12px;
+    margin-bottom: 6px;
     padding: 0 6px;
     width: 100%;
 }
